--- a/evaluation_criteria/static/css/styles.css
+++ b/evaluation_criteria/static/css/styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
 *{
     list-style: none;
     font-family: 'Jost', sans-serif;
@@ -73,19 +72,46 @@ ul.menu{
 }
 
 .content{
-    text-align: left;
-    color: black;
-    margin-left: 100px;
+    max-width: 500px;
+    width: 100%;
+    height: auto;
+    background: #fff;
+    padding: 60px 45px;
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    transform: translate(-50%,30%);
+    border-radius: 20px;
 }
 
-.content .form{
+.content h1{
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 26px;
+    font-style: bold;
+    color: #3aaf9f;
+}
+
+.content .form {
+    width:100%;
     height: 100%;
 }
 
-.content .form p .box{
-    font-size: 50px;
-    height: 20px;
-    font-weight: bold;
+.content .form .input_field{
+    margin-bottom: 10px;
+}
+
+.content .form .input_field input {
+    width: 100%;
+    padding: 12px;
+    padding-left: 15px;
+    border: none;
+    background: #eeeeee;
+}
+
+.content .form .input_field{
+    position: relative;
+    margin-bottom: 10px;
 }
 
 
@@ -100,4 +126,5 @@ ul.menu{
     display: flex;
     border-radius: 5px;
 }
+
 
