--- a/templates/add_course.html
+++ b/templates/add_course.html
@@ -1,28 +1,21 @@
-{% extends 'base.html' %} 
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <div class="content">
-    <h1>Add Course</h1>
-    <br>
-    <div class="form">
-        <form method="post">{% csrf_token %} 
-            {% for field in form %}
-                <div class="input_field">
-                    {{field}}
-                </div>
-                <p class="label tag">
-                    {{field.label_tag}}
-                </p>
-                <p class="box">
-                    
-                </p>
-                <br>
-            {% endfor %}
-            <button type="submit">
-                Add
-            </button>
-        </form>
-    </div>
-    
+  <h1>Add Course</h1>
+  <br />
+  <div class="form">
+    <form method="post">
+      {% csrf_token %} {% for field in form %}
+      <div class="label tag">
+        <b>{{field.label_tag}}</b>
+      </div>
+      <div class="input_field">{{field}}</div>
+      <br />
+      {% endfor %}
+      <div class="btn">
+        <button type="submit">Add</button>
+      </div>
+    </form>
+  </div>
 </div>
 
 {% endblock content %}
