--- a/templates/add_evaluationcriteria.html
+++ b/templates/add_evaluationcriteria.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 <div class="content">
-  <h1>Add Assignment</h1>
+  <h1>Add Evaluation Criteria</h1>
   <br />
   <div class="form">
     <form method="post">
