--- a/templates/create_assignment.html
+++ b/templates/create_assignment.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="content">
         <h1>
-            Add Course
+            Create Assignment
         </h1>
         <br />
         <div class="form">
@@ -20,7 +20,9 @@
                     <br/>
                 {% endfor %}
                 <div class="btn">
-                    <button type="submit">Add</button>
+                    <button type="submit">
+                        Create
+                    </button>
                 </div>
             </form>
         </div>
