--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,19 @@
-{% extends 'base.html' %}{% block content %} {% endblock content %}
+{% extends 'base.html' %}
+{% block content %} 
+<div class="content">
+    
+    {% if not user.is_authenticated %}
+        <a href="{% url 'login'  %}">
+            Log in
+        </a> or 
+        <a href="{% url 'signup'  %}">
+            sign up
+        </a> to view page
+    {% else %}
+        <a href="{% url 'view-courses' %}"> my courses</a>
+    {% endif %}
+        
+    
+</div>
+{% endblock content %}
+
