--- a/gpa/static/css/styles.css
+++ b/gpa/static/css/styles.css
@@ -20,11 +20,16 @@ ul li a{
     color: #505978;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 .navbar{
     width: 100%;
     margin: 60px auto;
-    height: 80px;
     background: #fff;
     padding: 0 50px;
     border-radius: 3px;
@@ -52,39 +57,75 @@ ul.menu{
 
 .navbar {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-
+    align-items: center;
+    background: #fff;
+    padding: 0 50px;
+    border-radius: 3px;
+    height: 100px; /* Set a fixed height for the navbar on larger screens */
 }
 
-.navbar .menu{
-    margin-left: 5px;
+.navbar .menu {
     display: flex;
 }
 
-.navbar .menu a{
-    height: 100%;
-    padding: 20px 12px;
+.navbar .menu a {
+    margin: 0 10px;
+    padding: 12px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+    transition: all 0.2s ease;
 }
-
 .navbar .menu a:hover,
 .navbar .menu a.active{
     border-bottom: 3px solid #505978;
 }
 
-.content{
-    text-align: left;
+.content {
+    max-width: 500px;
+    width: 100%;
+    height: auto; /* Change to "auto" for responsive height */
+    background: #fff;
+    padding: 60px 45px;
+    border-radius: 20px;
+    margin-top: 2%;
+    transform: translate(-50%, 30%);
+    bottom: 20px;
+}
+
+.content h1{
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 26px;
+    font-style: bold;
+    color: #3aaf9f;
+}
+
+.content .form {
+    width:100%;
+    height: auto;
+}
+
+.content .form .input_field input {
+    width: 100%;
+    padding: 12px;
+    padding-left: 15px;
+    border: none;
+    background: #eeeeee;
     color: black;
-    margin-left: 100px;
+    font-weight: bold;
 }
 
-.content .form{
-    height: 100%;
+.content .form .input_field{
+    position: relative;
+    margin-bottom: 10px;
+    color: black;
+    font-weight: bold;
 }
 
-.content .form p .box{
-    font-size: 50px;
-    height: 20px;
+.content .form .label_tag{
+    color: black;
     font-weight: bold;
 }
 
@@ -101,3 +142,48 @@ ul.menu{
     border-radius: 5px;
 }
 
+img{
+    max-width:100%;
+    display: block;
+}
+
+@media screen and (max-width: 767px) {
+    /* Your mobile styles go here */
+    .navbar {
+        flex-direction: column;
+        margin: 30px auto;
+        padding: 0 20px;
+        height: auto;
+    }
+
+    .navbar .menu {
+        margin-top: 20px;
+    }
+
+    .content {
+        padding: 30px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        position: absolute;
+    }
+}
+
+/* tablets */
+@media screen and (min-width: 768px) {
+    body {
+        font-size: 16px;
+    }
+
+    .navbar {
+        height: 100px;
+    }
+
+    .content {
+        padding: 30px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        position: absolute;
+    }
+}
